src/components/Header/Header.module.scss
.header {
  width: 95%;
  min-height: 100px;
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
  column-gap: 15px;
  padding: 5px 0;
}

.title {
  grid-column: 2;
  text-align: center;
  text-transform: uppercase;
  font-size: 40px;
  color: var(--theme-text-header);
  position: relative;
  z-index: 1;
}

.themeButton {
  grid-column: 3;
  justify-self: end;
  color: #fff;
  background-color: transparent;
  padding: 10px;
  border-radius: 10px;
  transition: background-color, 0.2s;

  @include hover-supported {
    &:hover {
      background-color: rgba(175, 202, 224, 0.5);
    }
  }

  & svg {
    @include icon-size(28px);
  }
}

@media (max-width: $tablet) {
  .header {
    min-height: 80px;
  }

  .title {
    font-size: 32px;
  }

  .themeButton svg {
    @include icon-size(22px);
  }
}

@media (max-width: $mobile) {
  .header {
    min-height: 60px;
  }

  .title {
    font-size: 26px;
  }
}

